--- a/lib/public/stylesheets/style.css
+++ b/lib/public/stylesheets/style.css
@@ -1,6 +1,8 @@
-body {
-  padding: 50px;
+.body {
+  padding-top: 50px;
+  height: 100vh;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #caa5ad;
 }
 
 a {
