--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -32,7 +32,7 @@
   <main>
         <div class="container text-center p-5">
             <div class="row">
-              <% for(let i=0; i<products.length; i++) { %>
+              <% for(let i = 0; i < products.length; i++) { %>
               <div class="col col-3 align-self-start">
                 
                 <div class="card mb-4">
@@ -45,7 +45,7 @@
                     <div class="card-body">
                       <h5 class="card-title"><%- products[i].name %></h5>
                       <p class="card-text"><%- products[i].description %></p>
-                      <a href="#!" class="btn btn-primary">$<%- products[i].price %></a>
+                      <span class="btn btn-primary">$<%- products[i].price %></span>
                       <a href="/show/<%= products[i].id%>" class="btn btn-primary">View</a>
                     </div>
                   </div>
