--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -13,8 +13,8 @@
           <div class="col-lg-12 col-xl-11">
             <div class="card text-black" style="border-radius: 25px;">
               <div class="card-body p-md-5">
-                <div class="row justify-content-center">
-                  <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+                <div class="row">
+                  <div class="col-md-6 col-xl-5 order-2 order-lg-1">
     
                     <p class="text-center h1 fw-bold mb-3 mx-1 mx-md-4 mt-3">Login</p>
     
@@ -50,9 +50,9 @@
                     </form>
     
                   </div>
-                  <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                  <div class="col-md-6 col-lg-6 col-xl-7 order-1 order-lg-2" style="overflow: hidden;">
     
-                    <img src="images/stat.jpeg" width="500px">
+                    <img src="images/stat.jpeg" style="width: max-content;">
                   </div>
                 </div>
               </div>
